--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>IPL Contest</title>
+  <title>IPL Contest V2</title>
 </head>
 <body>
   <h1>Welcome to the IPL Contest!</h1>
