--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <h1>Welcome to the IPL Contest!</h1>
-  <p>This is a simple web application for displaying IPL statistics and contests.</p>
+  <p>This is a simple web application for displaying IPL statistics and contests V2.</p>
 </body>
 </html>
